Overflow fixen

--- a/app/assets/stylesheets/spina.css.sass
+++ b/app/assets/stylesheets/spina.css.sass
@@ -97,7 +97,6 @@ nav#secondary
   float: left
   height: 100%
   left: 100px
-  overflow: scroll
   padding: 30px 0
   position: fixed
   width: 300px
